2006/01/14	muppetman

	* xs/GdkPixbuf.xs, t/GdkPixbuf.t: Bind and test
	gdk_pixbuf_save_to_buffer.

2006/01/01	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.113.

2006/01/01	kaffeetisch

	* t/GtkFileChooser.t: Don't use the same shortcut path twice.

	* xs/GtkObject.xs: Manually force Gtk2::Object to be a descendant
	of Glib::Object to work around the GInitiallyUnowned issue.

2005/12/18	muppetman

	* xs/GtkTreeModelSort.xs, t/GtkTreeModelSort.t: add new() as an
	alias for new_with_model().  Previously, new() fell back to
	Glib::Object::new(), which would allow creation of invalid objects,
	resulting in several very hard-to-debug bug reports.  The change
	is a little convoluted because we still allow the valid syntax of
	Glib::Object::new for compatibility.  Tests included.

	* MANIFEST, examples/table_packing.pl: add new example.

2005/12/12	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.112.

2005/12/12	kaffeetisch

	* t/PangoFont.t: Fix a potential test issue.

2005/11/14	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.111.

2005/11/14	kaffeetisch

	* t/GtkComboBoxEntry.t: Skip the @ISA test for Gtk2::CellEditable
	on anything older than 2.8.0.

	* xs/GtkHyperlink.xs: Only compile support for
	atk_hyperlink_is_inline if it's available.

	* xs/GdkCairo.xs, xs/PangoCairo.xs: Hush warnings about unused
	variables.

2005/11/13	muppetman

	* pm/TestHelper.pm: Add ginterfaces_ok(), a helper for testing
	interface implementation on GObjects.

	* xs/GdkEvent.xs: Don't croak() when trying to marshal unknown
	event types to perl.  You can get an unknown event type when
	running with a newer gtk+ than that for which the bindings were
	compiled; since this marshaling typically occurs during the
	process of invoking a signal handler (e.g. event or event-after),
	a croak() here can result in C stack corruption and eventually a
	crash.  Instead, warn() about it, and limp along with the generic