@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 use strict;
-use Gtk2::TestHelper tests => 1, noinit => 1;
+use Gtk2::TestHelper tests => 2, noinit => 1;
 
 # $Header$
 
@@ -9,6 +9,7 @@ my $label = Gtk2::Label -> new("Bla");
 
 $container -> add($label);
 is($container -> get_child(), $label);
+is($container -> child(), $label);
 
 __END__
 
